--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,20 @@
 {
-  "hosting": [
-    {
-      "target": "ring_of_fire",
-      "source": ".",
-      "frameworksBackend": {}
-    }
-  ]
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "hosting": {
+    "public": "dist/ring_of_fire",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
